--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "id": "c8f27335-dce7-4564-b9b9-a88be483d91a",
-  "name": "AFood Development",
-  "publisher": "Default publisher",
-  "version": "1.0.0.0",
+  "id": "cfbda349-b087-4623-9024-a5f227e2bfba",
+  "name": "American Foods",
+  "publisher": "American Foods",
+  "version": "25.0.0.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -12,15 +12,21 @@
   "logo": "",
   "dependencies": [],
   "screenshots": [],
-  "platform": "14.0.0.0",
-  "application": "14.0.0.0",
+  "platform": "1.0.0.0",
+  "application": "26.0.0.0",
   "idRanges": [
     {
       "from": 50100,
-      "to": 50149
+      "to": 50999
     }
-  ],
-  "contextSensitiveHelpUrl": "https://AFoodDevelopment.com/help/",
-  "showMyCode": true,
-  "runtime": "3.0"
+  ],  
+  "resourceExposurePolicy": {
+    "allowDebugging": true,
+    "allowDownloadingSource": false,
+    "includeSourceInSymbolFile": true
+  },
+  "runtime": "14.0",
+  "features": [
+    "NoImplicitWith"
+  ]
 }
