--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "cfbda349-b087-4623-9024-a5f227e2bfba",
   "name": "American Foods",
   "publisher": "American Foods",
-  "version": "25.0.0.0",
+  "version": "26.0.0.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -10,13 +10,32 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "id": "e41b425d-eade-4e41-936d-490279fb11b7",
+      "name": "KCP Dynamics",
+      "publisher": "KCP Dynamics",
+      "version": "1.0.0.0"
+    },
+    {
+      "id": "93b27377-54c0-4cb0-b3c6-5986dfade3d6",
+      "name": "AFI Custom",
+      "publisher": "KCP Dynamics",
+      "version": "1.0.1.3"
+    },
+    {
+      "id": "b358e74a-f835-4d40-9a9b-5acfb358e74a",
+      "name": "Dual Unit of Measure",
+      "publisher": "Theta Systems Limited",
+      "version": "25.0.0.0"
+    }
+  ],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "26.0.0.0",
   "idRanges": [
     {
-      "from": 50100,
+      "from": 50300,
       "to": 50999
     }
   ],  
