--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-            "tenant": "4c53bb4d-5a6b-4d5c-92d6-6db6076d4474"
+            "tenant": "4c53bb4d-5a6b-4d5c-92d6-6db6076d4474",
+            "schemaUpdateMode": "ForceSync"
         }
     ]
 }
