T0021-AFoods-Show License Plate on Pick

--- a/app.json
+++ b/app.json
@@ -46,6 +46,12 @@
       "name": "License Plate Management",
       "publisher": "Insight Works",
       "version": "1.97.9173.1"
+    },    
+    {
+      "id": "a5727ce6-368c-49e2-84cb-1a6052f0551c",
+      "name": "Tasklet Mobile WMS",
+      "publisher": "Tasklet Factory",
+      "version": "5.57.260.1"
     }
   ],
   "screenshots": [],
